--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"lint": "eslint --ext .js,.ts,.jsx,.tsx --fix --quiet ./packages",
 		"build:dev": "rm -rf dist && rollup --bundleConfigAsCjs --config scripts/rollup/dev.config.js",
 		"demo": "vite serve demos/test-fc --config scripts/vite/vite.config.js --force",
-		"demo-transition": "vite serve demos/transition --config scripts/vite/vite.config.js --force",
+		"demo-other": "vite serve demos/ref --config scripts/vite/vite.config.js --force",
 		"test": "jest --config scripts/jest/jest.config.js"
 	},
 	"keywords": [],
